Internal: Fix translation placeholders for consistency in multiple language files

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -262,7 +262,7 @@
     "installation guide": "installation guide",
     "Previous": "Zur\u00fcck",
     "Upgrade Chamilo LMS version": "Chamilo LMS-Version aktualisieren",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "F\u00fcr weitere Einzelheiten {0}",
     "Step 2 - Requirements": "Schritt 2 - Anforderungen",
     "read the installation guide": "lesen Sie die Installationsanleitung",
     "Warning!": "Warning!",
