--- a/assets/locales/el.json
+++ b/assets/locales/el.json
@@ -255,7 +255,7 @@
     "has not been found in that directory": "has not been found in that directory",
     "installation guide": "installation guide",
     "Previous": "\u03a0\u03c1\u03bf\u03b7\u03b3\u03bf\u03cd\u03bc\u03b5\u03bd\u03bf",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
