--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -262,7 +262,7 @@
     "installation guide": "installation guide",
     "Previous": "Anterior",
     "Upgrade Chamilo LMS version": "Actualizar la versi\u00f3n de Chamilo LMS",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "Para obtener m\u00e1s detalles {0}",
     "Step 2 - Requirements": "Paso 2 - Requisitos",
     "read the installation guide": "consulte la gu\u00eda de instalaci\u00f3n",
     "Warning!": "Warning!",
