--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -246,7 +246,7 @@
     "has not been found in that directory": "ez da direktorio honetan aurkitu",
     "installation guide": "installation guide",
     "Previous": "Aurrekoa",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
