--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -262,7 +262,7 @@
     "installation guide": "installation guide",
     "Previous": "Pr\u00e9c\u00e9dent",
     "Upgrade Chamilo LMS version": "Mettre \u00e0 jour depuis une version ant\u00e9rieure",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "Pour plus de d\u00e9tails {0}",
     "Step 2 - Requirements": "\u00c9tape 2 - Pr\u00e9-requis",
     "read the installation guide": "consultez le guide d'installation",
     "Warning!": "Warning!",
