--- a/assets/locales/hr_HR.json
+++ b/assets/locales/hr_HR.json
@@ -208,7 +208,7 @@
     "has not been found in that directory": "nije prona\u0111en u toj mapi",
     "installation guide": "installation guide",
     "Previous": "Prethodno",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
