--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -168,7 +168,7 @@
     "Error": "\u30a8\u30e9\u30fc",
     "installation guide": "installation guide",
     "Previous": "\u524d\u3078",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
