--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -251,7 +251,7 @@
     "has not been found in that directory": "n\u00e3o foi encontrado nessa pasta/directoria",
     "installation guide": "installation guide",
     "Previous": "Anterior",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
