--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -215,7 +215,7 @@
     "has not been found in that directory": "no ha sido encontrado en este directorio",
     "installation guide": "installation guide",
     "Previous": "\u00d1aupaq",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
