--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -254,7 +254,7 @@
     "has not been found in that directory": "nu este gasit in fisier",
     "installation guide": "installation guide",
     "Previous": "Precedent",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
