--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -262,7 +262,7 @@
     "installation guide": "installation guide",
     "Previous": "Prej\u0161nji",
     "Upgrade Chamilo LMS version": "Nadgradi ina\u010dico Chamilo LMS",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
