--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -175,7 +175,7 @@
     "Recommended": "Recommended",
     "installation guide": "installation guide",
     "Previous": "Prethodna",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
