--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -199,7 +199,7 @@
     "has not been found in that directory": "hittades inte i den mappen",
     "installation guide": "installation guide",
     "Previous": "F\u00f6reg\u00e5ende",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
