--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -162,7 +162,7 @@
     "Error": "Error",
     "installation guide": "installation guide",
     "Previous": "Nakaraan",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
