--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -193,7 +193,7 @@
     "Not writable": "Yaz\u0131labilir de\u011fil",
     "installation guide": "installation guide",
     "Previous": "\u00d6nceki",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
