--- a/assets/locales/uk_UA.json
+++ b/assets/locales/uk_UA.json
@@ -150,7 +150,7 @@
     "PHP version ": "PHP version ",
     "Recommended": "Recommended",
     "installation guide": "installation guide",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
