--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -261,7 +261,7 @@
     "installation guide": "installation guide",
     "Previous": "\u0627\u0644\u0633\u0627\u0628\u0642",
     "Upgrade Chamilo LMS version": "\u062a\u0631\u0642\u064a\u0629 \u0627\u0635\u062f\u0627\u0631 \u0627\u0644\u0646\u0638\u0627\u0645",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
