--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -222,7 +222,7 @@
     "has not been found in that directory": "nun s'atop\u00f3 nesti direutoriu",
     "installation guide": "installation guide",
     "Previous": "Anterior",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
