--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -229,7 +229,7 @@
     "has not been found in that directory": "\u043d\u0435 \u0435 \u043d\u0430\u043c\u0435\u0440\u0435\u043d\u0430 \u0432 \u0443\u043a\u0430\u0437\u0430\u043d\u0430\u0442\u0430 \u0434\u0438\u0440\u0435\u043a\u0442\u043e\u0440\u0438\u044f",
     "installation guide": "installation guide",
     "Previous": "\u041f\u0440\u0435\u0434\u0438\u0448\u043d\u0430 \u0441\u0442\u044a\u043f\u043a\u0430",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
