--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -257,7 +257,7 @@
     "has not been found in that directory": "No s'ha trobat en aquest directori",
     "installation guide": "installation guide",
     "Previous": "Anterior",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
