--- a/assets/locales/da.json
+++ b/assets/locales/da.json
@@ -180,7 +180,7 @@
     "Error": "Fejl",
     "installation guide": "installation guide",
     "Previous": "Forrige",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
