--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -169,7 +169,7 @@
     "Recommended": "Recommended",
     "installation guide": "installation guide",
     "Previous": "Anta\u016da",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
