--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -260,7 +260,7 @@
     "installation guide": "installation guide",
     "Previous": "\u05e7\u05d5\u05d3\u05dd",
     "Upgrade Chamilo LMS version": "\u05e9\u05d3\u05e8\u05d2 \u05d0\u05ea \u05d2\u05e8\u05e1\u05ea Chamilo LMS",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
