--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -169,7 +169,7 @@
     "Not writable": "Tidak dapat ditulis",
     "installation guide": "installation guide",
     "Previous": "Sebelumnya",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
