--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -259,7 +259,7 @@
     "has not been found in that directory": "non \u00e8 stato trovato in questa directory",
     "installation guide": "installation guide",
     "Previous": "Precedente",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
