--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -189,7 +189,7 @@
     "has not been found in that directory": "\u043d\u0435 \u0431\u0435\u0448\u0435 \u043f\u0440\u043e\u043d\u0430\u0458\u0434\u0435\u043d\u043e \u0432\u043e \u0442\u043e\u0458 \u0434\u0438\u0440\u0435\u043a\u0442\u043e\u0440\u0438\u0443\u043c",
     "installation guide": "installation guide",
     "Previous": "\u041f\u0440\u0435\u0442\u0445\u043e\u0434\u043d\u043e",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
