--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -257,7 +257,7 @@
     "installation guide": "installation guide",
     "Previous": "Vorige",
     "Upgrade Chamilo LMS version": "Upgrade Chamilo LMS version",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
