--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -256,7 +256,7 @@
     "has not been found in that directory": "nebol n\u00e1jden\u00fd v tomto katal\u00f3gu",
     "installation guide": "installation guide",
     "Previous": "Predch\u00e1dzaj\u00faci",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
