--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -208,7 +208,7 @@
     "Error": "\u9519\u8bef",
     "installation guide": "installation guide",
     "Previous": "\u4e0a\u4e00\u4e2a",
-    "For more details {0}": "For more details {0}",
+    "For more details %s": "For more details {0}",
     "Step 2 - Requirements": "Step 2 - Requirements",
     "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
