--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -27648,7 +27648,7 @@ msgstr "Foto de perfil del remitente"
 msgid "Warning"
 msgstr "Advertencia"
 
-msgid "Chamilo's installation wizard"
+msgid "Chamilo installation wizard"
 msgstr "Asistente de instalación de Chamilo"
 
 msgid "Prevent editing surveys for all surveys listed here (by code). Use * to prevent edition of all surveys."
