--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -186,7 +186,7 @@
     "Show Overview": "\u00dcbersicht anzeigen",
     "Install": "Installieren",
     "New installation": "Neuinstallation",
-    "Chamilo installation wizard": "Chamilo installation wizard",
+    "Chamilo installation wizard": "Installationsassistent von Chamilo",
     "Keyword": "Schlagwort",
     "Assignment name": "Name der Ausarbeitung",
     "Description": "Beschreibung",
@@ -247,7 +247,7 @@
     "Next": "Weiter",
     "Please select installation language": "Bitte w\u00e4hlen Sie die Installationssprache",
     "Server requirements": "Voraussetzungen des Servers",
-    "PHP version": "PHP version",
+    "PHP version": "PHP Version",
     "Your PHP version matches the minimum requirement:": "PHP Version ist Ok",
     "Recommended settings": "Empfohlene Einstellungen",
     "Setting": "Einstellung",
@@ -263,7 +263,7 @@
     "Upgrade Chamilo LMS version": "Chamilo LMS-Version aktualisieren",
     "For more details %s": "F\u00fcr weitere Einzelheiten {0}",
     "Step 2 - Requirements": "Schritt 2 - Anforderungen",
-    "read the installation guide": "lesen Sie die Installationsanleitung",
+    "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
     "Contact information": "Kontakt-Informationen",
     "Select one": "Eins ausw\u00e4hlen",
@@ -277,9 +277,9 @@
     "Dear user": "Hallo",
     "E-mail": "E-Mail",
     "Your company's name": "Name der  Firma / Organisation",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "T\u00e4tigkeitsbereich Ihrer Firma / Organisation",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Land Ihrer Firma / Organisation",
     "Company city": "Ort Ihrer  Firma / Organisation",
     "Preferred contact language": "Bevorzugte Kontakt-Sprache",
     "Do you have the power to take financial decisions on behalf of your company?": "K\u00f6nnen Sie finanzielle Entscheidungen innerhalb Ihrer Firma / Organisation f\u00e4llen?",
@@ -603,5 +603,7 @@
     "Scan the QR code to enable 2FA": "Scannen Sie den QR-Code, um die Zwei-Faktor-Authentifizierung zu aktivieren",
     "QR code for 2FA": "QR-Code f\u00fcr 2FA",
     "Private course": "Privatkurs",
-    "Not subscribed": "Nicht abonniert"
+    "Not subscribed": "Nicht abonniert",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Die Verbindung zur Datenbank schlug fehl. Dies ist meist ein falscher Benutzername oder Kennwort oder auch das Pr\u00e4fix ist falsch. Bitte pr\u00fcfen Sie alle Daten und versuchen Sie es erneut.",
+    "Go to your newly created portal.": "Gehen Sie zu Ihrem neu erstellten Portal"
 }
