--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -162,7 +162,7 @@
     "Next": "Sekvanta",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Servilaj bezonoj",
-    "PHP version": "PHP version",
+    "PHP version": "PHP-versio",
     "Your PHP version matches the minimum requirement:": "PHP-versio estas en ordo",
     "Recommended settings": "Rekomenditaj aran\u011doj",
     "Recommended": "Recommended",
@@ -175,9 +175,7 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "Presebla versio",
     "CC website": "CC website",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "Kontroli datumbankan konekton",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
