--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -186,7 +186,7 @@
     "Show Overview": "Sumario de la instalaci\u00f3n",
     "Install": "Instalar",
     "New installation": "Nueva instalaci\u00f3n",
-    "Chamilo installation wizard": "Chamilo installation wizard",
+    "Chamilo installation wizard": "Asistente de instalaci\u00f3n de Chamilo",
     "Keyword": "Palabra clave",
     "Assignment name": "Nombre de la tarea",
     "Description": "Descripci\u00f3n del curso",
@@ -247,7 +247,7 @@
     "Next": "Siguiente",
     "Please select installation language": "Por favor, seleccione el idioma de instalaci\u00f3n",
     "Server requirements": "Requisitos del servidor",
-    "PHP version": "PHP version",
+    "PHP version": "Versi\u00f3n PHP",
     "Your PHP version matches the minimum requirement:": "Su versi\u00f3n PHP es suficiente:",
     "Recommended settings": "Par\u00e1metros recomendados",
     "Setting": "Par\u00e1metro",
@@ -263,7 +263,7 @@
     "Upgrade Chamilo LMS version": "Actualizar la versi\u00f3n de Chamilo LMS",
     "For more details %s": "Para obtener m\u00e1s detalles {0}",
     "Step 2 - Requirements": "Paso 2 - Requisitos",
-    "read the installation guide": "consulte la gu\u00eda de instalaci\u00f3n",
+    "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
     "Contact information": "Informaci\u00f3n del contacto",
     "Select one": "Seleccione uno",
@@ -277,9 +277,9 @@
     "Dear user": "Estimado usuario",
     "E-mail": "Correo electr\u00f3nico",
     "Your company's name": "Nombre de la empresa",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "Sector",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Pa\u00eds",
     "Company city": "Ciudad",
     "Preferred contact language": "\u00bfQu\u00e9 idioma de contacto prefiere?",
     "Do you have the power to take financial decisions on behalf of your company?": "\u00bfTiene la capacidad de tomar decisiones financieras?",
@@ -603,5 +603,7 @@
     "Scan the QR code to enable 2FA": "Escanee el c\u00f3digo QR para activar la autenticaci\u00f3n de dos factores",
     "QR code for 2FA": "C\u00f3digo QR para 2FA",
     "Private course": "Curso privado",
-    "Not subscribed": "No inscrito"
+    "Not subscribed": "No inscrito",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La conexi\u00f3n con la base de datos ha fallado. Puede que el nombre de usuario, la contrase\u00f1a o el prefijo de la base de datos sean incorrectos. Por favor, revise estos datos y vuelva a intentarlo.",
+    "Go to your newly created portal.": "Ir a la plataforma que acaba de crear."
 }
