--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -276,9 +276,9 @@
     "Dear user": "\u0639\u0632\u064a\u0632\u064a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645",
     "E-mail": "\u0627\u0644\u0628\u0631\u064a\u062f",
     "Your company's name": "\u0627\u0633\u0645 \u0627\u0644\u0645\u0646\u0638\u0645\u0629",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "\u0646\u0634\u0627\u0637\u0627\u062a \u0645\u0646\u0638\u0645\u062a\u0643",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "\u0627\u0644\u062f\u0648\u0644\u0629 \u0627\u0644\u0627\u0645 \u0644\u0644\u0645\u0646\u0638\u0645\u0629",
     "Company city": "\u0627\u0644\u0645\u062f\u064a\u0646\u0629 \u0627\u0644\u062a\u064a \u062a\u0642\u0639 \u0641\u064a\u0647\u0627 \u0627\u0644\u0645\u0646\u0638\u0645\u0629",
     "Preferred contact language": "\u0644\u063a\u0629 \u0627\u0644\u062a\u0648\u0627\u0635\u0644 \u0627\u0644\u0645\u0641\u0636\u0644\u0629",
     "Do you have the power to take financial decisions on behalf of your company?": "\u0647\u0644 \u0644\u062f\u064a\u0643 \u0627\u0644\u0633\u0644\u0637\u0629 \u0644\u0627\u062a\u062e\u0627\u0630 \u0627\u0644\u0642\u0631\u0627\u0631\u0627\u062a \u0627\u0644\u0645\u0627\u0644\u064a\u0629 \u0646\u064a\u0627\u0628\u0629 \u0645\u0646\u0638\u0645\u062a\u0643",
@@ -602,5 +602,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "\u0641\u0634\u0644 \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a\u060c \u0647\u0630\u0627 \u064a\u062d\u062f\u062b \u0628\u0633\u0628\u0628 \u062e\u0637\u0623 \u0641\u064a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u060c \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0627\u0648 \u0628\u0627\u062f\u0626\u0629 \u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a\u060c \u064a\u0631\u062c\u0649 \u0645\u0631\u0627\u062c\u0639\u0629 \u0647\u0630\u0647 \u0627\u0644\u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0645\u0631\u0629 \u0627\u062e\u0631\u0629",
+    "Go to your newly created portal.": "Go to your newly created portal."
 }
