--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -209,7 +209,7 @@
     "Next": "Siguiente",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Necesidaes del servidor",
-    "PHP version": "PHP version",
+    "PHP version": "Versi\u00f3n PHP",
     "Your PHP version matches the minimum requirement:": "La versi\u00f3n PHP ye correuta",
     "Recommended settings": "Par\u00e1metros recomendaos",
     "Recommended": "Recommended",
@@ -230,9 +230,7 @@
     "I accept": "Aceuto",
     "CC website": "CC website",
     "Dear user": "Estim\u00e1u usuariu",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "Comprobar la conesi\u00f3n cola base de datos",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -507,5 +505,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La conesi\u00f3n a la base de datos fall\u00f3. Pue ser que'l nome d'usuariu, la se\u00f1a o el prefixu de la base datos nun valgan. Reviselos y vuelva intentalo.",
+    "Go to your newly created portal.": "Dir a la plataforma qu'acaba crear."
 }
