--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -219,7 +219,6 @@
     "Step 1 - Installation Language": "Step 1 - Installation Language",
     "Next": "\u0628\u0639\u062f\u06cc",
     "Please select installation language": "Please select installation language",
-    "PHP version": "PHP version",
     "Setting": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a",
     "Recommended": "Recommended",
     "Error": "\u062e\u0637\u0627",
@@ -239,9 +238,9 @@
     "CC website": "CC website",
     "Dear user": "\u06a9\u0627\u0631\u0628\u0631 \u06af\u0631\u0627\u0645\u06cc",
     "Your company's name": "\u0646\u0627\u0645 \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "\u0641\u0639\u0627\u0644\u06cc\u062a \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "\u06a9\u0634\u0648\u0631 \u0645\u062d\u0644\u06cc \u0634\u0631\u06a9\u062a \u0634\u0645\u0627",
     "Company city": "\u0634\u0647\u0631 \u0634\u0631\u06a9\u062a",
     "Preferred contact language": "\u0632\u0628\u0627\u0646 \u062a\u0645\u0627\u0633 \u067e\u06cc\u0634\u0641\u0631\u0636",
     "Check database connection": "\u0686\u06a9 \u06a9\u0631\u062f\u0646 \u0627\u0631\u062a\u0628\u0627\u0637 \u0628\u0627 \u0628\u0627\u0646\u06a9 \u0627\u0637\u0644\u0627\u0639\u0627\u062a\u06cc",
