--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -177,7 +177,7 @@
     "Your browser does not support Javascript": "Votre navigateur ne supporte pas le JavaScript",
     "Email reply header": "Le {0}, {1} ({2}) a \u00e9crit\u202f:",
     "My files": "Mes fichiers",
-    "Read the installation guide": "consultez le guide d'installation",
+    "Read the installation guide": "Consultez le guide d'installation",
     "Installation language": "Langue d'installation",
     "Requirements": "Pr\u00e9-requis",
     "License": "Licence",
@@ -186,7 +186,7 @@
     "Show Overview": "R\u00e9capitulatif",
     "Install": "Installation",
     "New installation": "Nouvelle installation",
-    "Chamilo installation wizard": "Chamilo installation wizard",
+    "Chamilo installation wizard": "Assistant d'installation de Chamilo",
     "Keyword": "Mot-cl\u00e9",
     "Assignment name": "Nom du travail",
     "Description": "Description",
@@ -247,7 +247,7 @@
     "Next": "Suivant",
     "Please select installation language": "S\u00e9lectionnez une langue d'installation",
     "Server requirements": "Pr\u00e9-requis serveur",
-    "PHP version": "PHP version",
+    "PHP version": "Version de PHP",
     "Your PHP version matches the minimum requirement:": "Version de PHP suffisante\u202f:",
     "Recommended settings": "Param\u00e8tres recommand\u00e9s",
     "Setting": "Param\u00e8tre",
@@ -263,7 +263,7 @@
     "Upgrade Chamilo LMS version": "Mettre \u00e0 jour depuis une version ant\u00e9rieure",
     "For more details %s": "Pour plus de d\u00e9tails {0}",
     "Step 2 - Requirements": "\u00c9tape 2 - Pr\u00e9-requis",
-    "read the installation guide": "consultez le guide d'installation",
+    "read the installation guide": "read the installation guide",
     "Warning!": "Warning!",
     "Contact information": "Information de contact",
     "Select one": "Chosissez",
@@ -277,9 +277,9 @@
     "Dear user": "Cher utilisateur",
     "E-mail": "Courriel",
     "Your company's name": "Nom de votre entreprise",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "Activit\u00e9 de votre entreprise",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Pays de votre entreprise",
     "Company city": "Ville de votre entreprise",
     "Preferred contact language": "Langue de contact favorite",
     "Do you have the power to take financial decisions on behalf of your company?": "\u00cates-vous habilit\u00e9 \u00e0 prendre des d\u00e9cisions financi\u00e8res pour votre entreprise\u202f?",
@@ -603,5 +603,7 @@
     "Scan the QR code to enable 2FA": "Scannez le code QR pour activer l'authentification \u00e0 deux facteurs",
     "QR code for 2FA": "Code QR pour l'authentification \u00e0 deux facteurs",
     "Private course": "Cours priv\u00e9",
-    "Not subscribed": "Non inscrit"
+    "Not subscribed": "Non inscrit",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La connexion \u00e0 la base de donn\u00e9es a \u00e9chou\u00e9. Ceci est g\u00e9n\u00e9ralement d\u00fb \u00e0 une mauvaise configuration de l'utilisateur, du mot de passe ou du pr\u00e9fixe de base de donn\u00e9es indiqu\u00e9s ci-dessus. Veuillez les r\u00e9viser attentivement et essayer \u00e0 nouveau.",
+    "Go to your newly created portal.": "Aller directement sur votre nouveau portail."
 }
