--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -245,7 +245,7 @@
     "Next": "Seguente",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Caratteristiche del server",
-    "PHP version": "PHP version",
+    "PHP version": "Versione PHP",
     "Your PHP version matches the minimum requirement:": "La Versione di PHP \u00e8 corretta",
     "Recommended settings": "Configurazione consigliata",
     "Setting": "Configurazione",
@@ -274,9 +274,9 @@
     "Dear user": "Gentile utente",
     "E-mail": "E-mail",
     "Your company's name": "Il nome della tua organizzazione",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "Settore della tua organizzazione",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Sede centrale dell'organizzazione",
     "Company city": "Citt\u00e0 dell'organizzazione",
     "Preferred contact language": "Lingua di contatto preferita",
     "Do you have the power to take financial decisions on behalf of your company?": "Hai influenza sulle decisioni relative alla spesa all'interno della tua organizzazione?",
@@ -587,5 +587,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La connessione al database \u00e8 fallita. In genere c'\u00e8 un errore nell'username o nella password o ancora nel prefisso selezionato. Controlla questi valori e riprova.",
+    "Go to your newly created portal.": "Vai direttamente al portale appena creato"
 }
