--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -230,7 +230,7 @@
     "Next": "N\u0101ko\u0161ais",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Servera vajadz\u012bbas",
-    "PHP version": "PHP version",
+    "PHP version": "PHP versija",
     "Your PHP version matches the minimum requirement:": "PHP versija ir OK",
     "Recommended settings": "Rekomend\u0113tie iestat\u012bjumi",
     "Recommended": "Recommended",
@@ -257,9 +257,9 @@
     "CC website": "CC website",
     "Dear user": "Cien\u012bjamais Kursant,",
     "Your company's name": "J\u016bsu uz\u0146\u0113muma nosaukums",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "J\u016bsu uz\u0146\u0113muma darb\u012bbas veids",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "J\u016bsu uz\u0146\u0113muma m\u012btnes valsts",
     "Company city": "Pils\u0113ta, kur\u0101 atrodas Uz\u0146\u0113mums",
     "Preferred contact language": "V\u0113lam\u0101 kontaktu valoda",
     "Do you have the power to take financial decisions on behalf of your company?": "Vai jums ir ties\u012bbas pie\u0146emt finansi\u0101lus l\u0113mumus j\u016bsu uz\u0146\u0113muma v\u0101rd\u0101?",
@@ -552,5 +552,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Savienojums ar datub\u0101zi nav izdevies. Tas galvenok\u0101rt ir saist\u012bts ar nepareizu lietot\u0101ja v\u0101rdu, nepareizu paroli vai nepareizu datu b\u0101zes prefiksu noteik\u0161anu iepriek\u0161. L\u016bdzu, p\u0101rskatiet \u0161os iestat\u012bjumus un m\u0113\u0123iniet v\u0113lreiz.",
+    "Go to your newly created portal.": "Dodieties uz savu jaunizveidoto port\u0101lu"
 }
