--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -176,7 +176,7 @@
     "Next": "\u0421\u043b\u0435\u0434\u043d\u043e",
     "Please select installation language": "Please select installation language",
     "Server requirements": "\u0411\u0430\u0440\u0430\u045a\u0430 \u0448\u0442\u043e \u0441\u0435 \u043e\u0434\u043d\u0435\u0441\u0443\u0432\u0430\u0442 \u043d\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u043e\u0442",
-    "PHP version": "PHP version",
+    "PHP version": "\u0412\u0435\u0440\u0437\u0438\u0458\u0430 \u043d\u0430 PHP",
     "Your PHP version matches the minimum requirement:": "PHP \u0432\u0435\u0440\u0437\u0438\u0458\u0430\u0442\u0430 \u0435 \u0434\u043e\u0431\u0440\u0430",
     "Recommended settings": "\u041f\u0440\u0435\u043f\u043e\u0440\u0430\u0447\u043b\u0438\u0432\u0438 \u043f\u043e\u0441\u0442\u0430\u0432\u043a\u0438",
     "Recommended": "Recommended",
@@ -197,9 +197,7 @@
     "I accept": "\u041f\u0440\u0438\u0444\u0430\u045c\u0430\u043c",
     "CC website": "CC website",
     "Dear user": "\u0414\u0440\u0430\u0433 \u043a\u043e\u0440\u0438\u0441\u043d\u0438\u043a\u0443",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "\u041f\u0440\u043e\u0432\u0435\u0440\u043a\u0430 \u043d\u0430 \u043a\u043e\u043d\u0435\u043a\u0446\u0438\u0458\u0430\u0442\u0430 \u0441\u043e \u0431\u0430\u0437\u0438\u0442\u0435 \u043d\u0430 \u043f\u043e\u0434\u0430\u0442\u043e\u0446\u0438",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -451,5 +449,6 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "Go to your newly created portal.": "\u041e\u0434\u0435\u0442\u0435 \u043d\u0430 \u0412\u0430\u0448\u0438\u043e\u0442 \u043d\u043e\u0432\u043e\u043a\u0440\u0435\u0438\u0440\u0430\u043d \u043f\u043e\u0440\u0442\u0430\u043b."
 }
