--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -237,7 +237,7 @@
     "Next": "Seguinte",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Requisitos do servidor",
-    "PHP version": "PHP version",
+    "PHP version": "Vers\u00e3o do PHP",
     "Your PHP version matches the minimum requirement:": "A vers\u00e3o de PHP est\u00e1 correcta",
     "Recommended settings": "Defini\u00e7\u00f5es recomendadas",
     "Setting": "Configura\u00e7\u00e3o",
@@ -265,9 +265,9 @@
     "CC website": "CC website",
     "Dear user": "Caro(a) utilizador(a)",
     "Your company's name": "Nome da empresa",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "Actividade da empresa",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Pa\u00eds onde se localiza a empresa?",
     "Company city": "Cidade da empresa",
     "Preferred contact language": "L\u00edngua de contato preferencial?",
     "Do you have the power to take financial decisions on behalf of your company?": "Tem autoriza\u00e7\u00e3o para tomar decis\u00f5es financeiras em nome da sua empresa?",
@@ -566,5 +566,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "A liga\u00e7\u00e3o \u00e0 base-de-dados falhou. Geralmente \u00e9 devido a um login/acesso incorrecto ou senha/password incorrecta ou ainda o prefixo da base-de-dados  definido acima incorrecto. Por favor reveja as configura\u00e7\u00f5es e tente novamente.",
+    "Go to your newly created portal.": "Ir para o seu portal rec\u00e9m-criado."
 }
