--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -202,7 +202,7 @@
     "Next": "Hamuq",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Requisitos del servidor",
-    "PHP version": "PHP version",
+    "PHP version": "Versi\u00f3n PHP",
     "Your PHP version matches the minimum requirement:": "La versi\u00f3n PHP es correcta",
     "Recommended settings": "Par\u00e1metros recomendados",
     "Recommended": "Recommended",
@@ -223,9 +223,7 @@
     "I accept": "Acepto",
     "CC website": "CC website",
     "Dear user": "Estimado usuario",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "Comprobar la conexi\u00f3n con la base de datos",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -496,5 +494,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "La conexi\u00f3n con la base de datos ha fallado. Puede que el nombre de usuario, la contrase\u00f1a o el prefijo de la base de datos sean incorrectos. Por favor, revise estos datos y vuelva a intentarlo.",
+    "Go to your newly created portal.": "Ir a la plataforma que acaba de crear."
 }
