--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -240,7 +240,7 @@
     "Next": "Urm\u0103torul",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Cerintele serverului",
-    "PHP version": "PHP version",
+    "PHP version": "Versiune PHP",
     "Your PHP version matches the minimum requirement:": "Versiunea PHP este OK",
     "Recommended settings": "Setari recomandate",
     "Setting": "Parametru",
@@ -268,9 +268,9 @@
     "CC website": "CC website",
     "Dear user": "Stimate utilizator",
     "Your company's name": "Numele companiei",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "Sector",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Tara",
     "Company city": "Oras",
     "Preferred contact language": "Ce limb\u0103 de contactat preferati?",
     "Do you have the power to take financial decisions on behalf of your company?": "Are capacitatea de a lua decizii financiare?",
@@ -571,5 +571,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Conexiunea cu baza de date a esuat.Poate numele de uzuar,pinul sau prefixul de la baza de date nu sunt corecte.Va rugam,revizati aceste date si incercati din nou",
+    "Go to your newly created portal.": "Mergeti la portalul proaspat creat."
 }
