--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -181,7 +181,7 @@
     "Next": "\u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0439",
     "Please select installation language": "Please select installation language",
     "Server requirements": "\u0422\u0440\u0435\u0431\u043e\u0432\u0430\u043d\u0438\u044f \u0441\u0435\u0440\u0432\u0435\u0440\u0430",
-    "PHP version": "PHP version",
+    "PHP version": "PHP \u0432\u0435\u0440\u0441\u0438\u044f",
     "Your PHP version matches the minimum requirement:": "PHP \u0432\u0435\u0440\u0441\u0438\u044f \u043f\u043e\u0434\u0445\u043e\u0434\u0438\u0442",
     "Recommended settings": "\u0420\u0435\u043a\u043e\u043c\u0435\u043d\u0434\u043e\u0432\u0430\u043d\u043d\u044b\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438",
     "Recommended": "Recommended",
@@ -202,9 +202,7 @@
     "I accept": "\u042f \u043f\u0440\u0438\u043d\u0438\u043c\u0430\u044e",
     "CC website": "CC website",
     "Dear user": "\u0423\u0432\u0430\u0436\u0430\u0435\u043c\u044b\u0439 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "\u041f\u0440\u043e\u0432\u0435\u0440\u0438\u0442\u044c \u0441\u0432\u044f\u0437\u044c \u0441 \u0431\u0430\u0437\u043e\u0439 \u0434\u0430\u043d\u043d\u044b\u0445",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -462,5 +460,6 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "Go to your newly created portal.": "\u041f\u0435\u0440\u0435\u0439\u0434\u0438\u0442\u0435 \u043d\u0430 \u0412\u0430\u0448 \u043d\u0435\u0434\u0430\u0432\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u043d\u043d\u044b\u0439 \u043f\u043e\u0440\u0442\u0430\u043b"
 }
