--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -247,7 +247,7 @@
     "Next": "Naslednji",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Stre\u017enikove zahteve",
-    "PHP version": "PHP version",
+    "PHP version": "Verzija PHP",
     "Your PHP version matches the minimum requirement:": "PHP vezija : ustrezna",
     "Recommended settings": "Priporo\u010dene nastavitve",
     "Setting": "Nastavitev",
@@ -277,9 +277,9 @@
     "Dear user": "Spo\u0161tovani uporabnik",
     "E-mail": "E-po\u0161ta",
     "Your company's name": "Naziv organizacije/podjetja",
-    "Your company's activity": "Your company's activity",
+    "Your company's activity": "Aktivnosti tvojega podjetja",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
+    "Your company's home country": "Dr\u017eava va\u0161e organizacije/podjetja",
     "Company city": "Mesto organizacije/podjetja",
     "Preferred contact language": "\u017delen jezik pri kontaktu",
     "Do you have the power to take financial decisions on behalf of your company?": "Ali imate mo\u017enosti finan\u010dnih odlo\u010ditev v okviru va\u0161e organizacije/podjetja?",
@@ -602,5 +602,7 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "The database connection has failed. This is generally due to the wrong user, the wrong password or the wrong database prefix being set above. Please review these settings and try again.": "Povezava s podatkovno bazo ni uspela. V splo\u0161nem se ta napaka pojavi zaradi napa\u010dnega uporabni\u0161kega imena, gesla, imena podatkovne baze ali njene predpone. Preverite nastavitve in poskusite ponovno.",
+    "Go to your newly created portal.": "Pojdi na novo ustvarjen portal."
 }
