--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -186,7 +186,7 @@
     "Next": "N\u00e4sta",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Krav p\u00e5 servern",
-    "PHP version": "PHP version",
+    "PHP version": "PHP-version",
     "Your PHP version matches the minimum requirement:": "PHP-versionen \u00e4r OK",
     "Recommended settings": "Rekommenderade inst\u00e4llningar",
     "Recommended": "Recommended",
@@ -208,9 +208,7 @@
     "I accept": "Jag godk\u00e4nner",
     "CC website": "CC website",
     "Dear user": "Hej",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "Kontrollera databas kopplingen",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -470,5 +468,6 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "Go to your newly created portal.": "G\u00e5 till din nya portal."
 }
