--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -155,7 +155,7 @@
     "Next": "\u0e15\u0e48\u0e2d\u0e44\u0e1b:Next",
     "Please select installation language": "Please select installation language",
     "Server requirements": "\u0e2a\u0e34\u0e48\u0e07\u0e17\u0e35\u0e48\u0e15\u0e49\u0e2d\u0e07\u0e15\u0e34\u0e14\u0e15\u0e31\u0e49\u0e07\u0e43\u0e19\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e41\u0e21\u0e48\u0e02\u0e48\u0e32\u0e22\u0e1a\u0e23\u0e34\u0e01\u0e32\u0e23",
-    "PHP version": "PHP version",
+    "PHP version": "PHP \u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e0a\u0e31\u0e48\u0e19",
     "Your PHP version matches the minimum requirement:": "PHP \u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e0a\u0e31\u0e48\u0e19\u0e19\u0e35\u0e49 \u0e43\u0e0a\u0e49\u0e23\u0e48\u0e27\u0e21\u0e44\u0e14\u0e49",
     "Recommended settings": "\u0e41\u0e19\u0e30\u0e19\u0e33\u0e15\u0e32\u0e21\u0e04\u0e48\u0e32\u0e19\u0e35\u0e49",
     "Recommended": "Recommended",
@@ -172,9 +172,7 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "\u0e01\u0e32\u0e23\u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15\u0e25\u0e34\u0e02\u0e2a\u0e34\u0e17\u0e18\u0e34\u0e4c\u0e49 \u0e02\u0e2d\u0e07\u0e40\u0e27\u0e2d\u0e23\u0e4c\u0e0a\u0e31\u0e48\u0e19\u0e17\u0e35\u0e48\u0e43\u0e0a\u0e49\u0e1b\u0e31\u0e08\u0e08\u0e38\u0e1a\u0e31\u0e19",
     "CC website": "CC website",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "\u0e04\u0e25\u0e34\u0e01\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e01\u0e32\u0e23\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e15\u0e48\u0e2d\u0e01\u0e31\u0e1a\u0e10\u0e32\u0e19\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
