--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -183,7 +183,7 @@
     "Next": "Sonraki",
     "Please select installation language": "Please select installation language",
     "Server requirements": "Sunucu gereksinimleri",
-    "PHP version": "PHP version",
+    "PHP version": "PHP s\u00fcr\u00fcm\u00fc",
     "Your PHP version matches the minimum requirement:": "PHP s\u00fcr\u00fcm\u00fc Tamam",
     "Recommended settings": "\u00d6nerilen ayarlar",
     "Recommended": "Recommended",
@@ -199,9 +199,7 @@
     "Step 3 - License": "Step 3 - License",
     "Printable version": "Yazd\u0131r\u0131labilir s\u00fcr\u00fcm",
     "CC website": "CC website",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "Veritaban\u0131 ba\u011flant\u0131s\u0131n\u0131 kontrol ediniz.",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
