--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -177,7 +177,7 @@
     "Next": "\u4e0b\u4e00\u500b",
     "Please select installation language": "Please select installation language",
     "Server requirements": "\u4f3a\u670d\u5668\u8981\u6c42",
-    "PHP version": "PHP version",
+    "PHP version": "PHP \u7248\u672c",
     "Your PHP version matches the minimum requirement:": "\u901a\u904e PHP \u7248\u672c",
     "Recommended settings": "\u5efa\u8b70\u8a2d\u5b9a",
     "Recommended": "Recommended",
@@ -196,9 +196,7 @@
     "I accept": "\u6211\u63a5\u53d7",
     "CC website": "CC website",
     "Dear user": "\u89aa\u611b\u7684\u4f7f\u7528\u8005",
-    "Your company's activity": "Your company's activity",
     "Your job\\'s description": "Your job\\'s description",
-    "Your company's home country": "Your company's home country",
     "Check database connection": "\u6e2c\u8a66\u6578\u64da\u5eab\u9023\u7dda",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
@@ -453,5 +451,6 @@
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
     "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Not subscribed": "Not subscribed",
+    "Go to your newly created portal.": "\u700f\u89bd\u4f60\u65b0\u5efa\u7684\u7ad9\u53f0"
 }
